<resources>
    <string name="app_name">SINET</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Setting</string>
    <string name="title_notifications">Result</string>
    <string name="title_activity_niimain">NIIMainActivity</string>


    <string name="title_topic">Topic: </string>
    <string name="title_sensor_type">Type: </string>
    <string name="qos">Qos</string>
    <string name="retained">Retained</string>
    <string name="detail">Detail</string>


    <string-array name="sensor_topics">
        <item>mqtt-android-light</item>
        <item>mqtt-android-accelerometer</item>
        <item>mqtt-android-gravity</item>
        <item>mqtt-android-video</item>
        <item>mqtt-android-GPS</item>
    </string-array>
    <string-array name="sensor_types">
        <item>general-light</item>
        <item>general-accelerometer</item>
        <item>general-gravity</item>
        <item>sensor-video</item>
        <item>sensor-image</item>
    </string-array>
    <string-array name="sensor_qos">
        <item>1</item>
        <item>0</item>
        <item>2</item>
        <item>3</item>
    </string-array>

</resources>
