<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:columnCount="2"
    android:rowCount="5">

    <EditText
        android:id="@+id/sensor_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_row="0"
        android:hint="write a name for the sensor..."
        android:inputType="text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/title_topic"/>

    <Spinner
        android:id="@+id/sensor_topic_spinner"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_marginBottom="20dp"
        android:entries="@array/sensor_topics" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:layout_row="2"
        android:layout_column="0"
        android:text="@string/title_sensor_type" />

    <Spinner
        android:id="@+id/sensor_type_spinner"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_marginBottom="20dp"
        android:entries="@array/sensor_types" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:layout_row="3"
        android:layout_column="0"
        android:text="@string/qos" />

    <Spinner
        android:id="@+id/qos_spinner"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="1"
        android:layout_marginBottom="20dp"
        android:entries="@array/sensor_qos" />

   <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:layout_row="4"
        android:layout_column="0"
        android:text="@string/retained" />

    <Switch
        android:id="@+id/retained_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="1"
        android:layout_marginBottom="20dp"
        android:checked="true" />

</GridLayout>