<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"

    android:columnCount="3"
    android:rowCount="4">

    <TextView
        android:id="@+id/sensor_item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:padding="2dp"
        android:textColor="@color/cardview_dark_background"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:text="@string/title_topic"
        android:textColor="@color/cardview_dark_background"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/sensor_item_topic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"
        android:textSize="15sp"
        android:layout_columnWeight="15"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:textColor="@color/cardview_dark_background" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_row="2"
        android:layout_column="0"
        android:textSize="15sp"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:text="@string/title_sensor_type"
        android:textColor="@color/cardview_dark_background" />

    <TextView
        android:id="@+id/sensor_item_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_columnWeight="15"
        android:textSize="15sp"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:textColor="@color/cardview_dark_background" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:text="Value:"
        android:textColor="@color/cardview_dark_background"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/sensor_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="1"
        android:layout_columnWeight="15"
        android:textSize="15sp"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:textColor="@color/cardview_dark_background" />

    <ImageButton
        android:id="@+id/sensor_item_detail_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_row="1"
        android:layout_rowSpan="2"
        android:layout_columnWeight="1"
        android:layout_column="2"
        android:layout_gravity="end|fill"
        android:contentDescription="@string/detail"
        android:scaleType="fitEnd"
        android:background="@color/background"
        android:src="@drawable/next" />

</GridLayout>